Update GlobalRuntimeImpl.java
WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by apgas.impl.GlobalRuntimeImpl (file:<path>/x10-master/apgas/target/apgas-2.0.0-SNAPSHOT.jar) to field java.util.concurrent.ForkJoinPool.ctl
WARNING: Please consider reporting this to the maintainers of apgas.impl.GlobalRuntimeImpl